# game-snippets

./: .hgignore  README.md
Solar/: Makefile  main.cpp  model.cpp  model.h  render.cpp  render.h
gra-waves/: CMakeLists.txt  GraWaves.cpp  main.cpp
gra-waves/config/: gw.0.conf  gw1.conf  gw2.conf
gra-waves/config2/: gw.0.conf  gw.1.conf  gw.conf
solar-sim/: CMakeLists.txt  body.cpp  display.cpp  main.cpp
